--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
     <!-- Tu contenido irá aquí -->
     <h1>¡Hola! Soy Mr-Vane</h1>
-    <p>Esta es mi landing page personal</p>
+    <p>Os juro que se de html</p>
     
     <script src="script.js"></script>
 </body>
